--- a/src/Headers/Headers.sass
+++ b/src/Headers/Headers.sass
@@ -2,16 +2,20 @@
     
 .top-nav
     margin: 0
-    background-color: $topNav
+    background-color: $darkTopNav
+    
+    color: #fff
     display: flex
     flex-direction: row
     justify-content: space-between
     padding: 1%
-    height: 2vh
+    height: 6vh
     align-items: center
+    
 
 .nav-button
-    display: flex;
+    
+    display: flex
     flex-direction: row
     justify-content: space-around
     align-items: center
