--- a/src/color.sass
+++ b/src/color.sass
@@ -9,9 +9,10 @@ $textColor: #050505
 //dark
 $darkBg: #0A0909
 $gold: #FFA01A
-$darkBbutton: #C4C4C4
+$darkBbutton: #3a1e7c
+$grey: #817A7A
 $darkBbuttonShadow: #8daccb
-$darkTopNav: #B09F9F
+$darkTopNav: #5c343c
 $darkPpomodor: #ff7e7e
 $darkTtextColor: #817A7A
 
