--- a/src/Content/Content.sass
+++ b/src/Content/Content.sass
@@ -3,7 +3,8 @@
 
 
 .content-contTimer
-    background: linear-gradient(#CA5A5A, #FDF9F9)
+    background: linear-gradient(#fc466b ,10%, #0A0909)
+
     display: flex
     flex-direction: column
     align-items: center
@@ -12,18 +13,20 @@
         margin: 0
         padding-top: 150px
         font-size: 50px
-        font-family: 'Ribeye Marrow', cursive;
+        font-family: 'Ribeye Marrow', cursive
     .play svg
         margin-top: 50px
         font-size: 35px
 
 .content-contInfo
-    margin-top: 65px
+    background-color: #0A0909
+
     padding: 50px
     h1
         font-size: 20px
         text-align: left 
+        color: $gold
     p 
         text-align: left
-        font-family: 'Ribeye Marrow', cursive;
-        color: $textColor
+        font-family: 'Ribeye Marrow', cursive
+        color: $grey
