--- a/src/TimerCont/Timer.sass
+++ b/src/TimerCont/Timer.sass
@@ -1,8 +1,4 @@
-
-
-
 .content-contTimer
-    background: linear-gradient(#CA5A5A, #FDF9F9)
     display: flex
     flex-direction: column
     align-items: center
@@ -11,7 +7,9 @@
         margin: 0
         padding-top: 150px
         font-size: 50px
-        font-family: 'Ribeye Marrow', cursive;
+        font-family: 'Ribeye Marrow', cursive
+
+
     .play 
         display: flex
         justify-content: space-around
