--- a/src/topnavButton/topnavButtin.sass
+++ b/src/topnavButton/topnavButtin.sass
@@ -2,10 +2,13 @@
 
 
 .top_nav_button
-    background-color: $button
+    border-radius: 16px
+    background-color: $darkBbutton
+    background-color: #f92727
     box-sizing: border-box
     margin: 0 10px
-    box-shadow: 1px 1px 5px $buttonShadow
+    // box-shadow: 1px 1px 5px $buttonShadow
+    margin-top: 5px
     svg
         padding: 10px
 
