--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ html,body {
   -moz-osx-font-smoothing: grayscale;
   padding: 0;
   height: 100%;
-  background-color: #0A0909;
+  /* background-color: #0A0909; */
 
 }
 
