--- a/src/Buttons/topnavButton/topnavButtin.sass
+++ b/src/Buttons/topnavButton/topnavButtin.sass
@@ -1,16 +1,16 @@
-@import '../color';
+@import '../../color.sass';
 
 
 .top_nav_button
     border-radius: 16px
-    background-color: $darkBbutton
-    background-color: #f92727
+    background-color: red
+
     box-sizing: border-box
-    margin: 0 10px
+    margin-left: 2px
     // box-shadow: 1px 1px 5px $buttonShadow
-    margin-top: 5px
+
     svg
-        padding: 10px
+        padding: 15px
 
 
 
