--- a/src/Timer/Timer.sass
+++ b/src/Timer/Timer.sass
@@ -1,17 +1,18 @@
 .cont-timer
-    padding: 150px 0px
+    // padding: 150px 0px
     background-color: #191a18
     width: 100%
-    
     display: flex
     justify-content: center
     align-items: center
     flex-direction: column
-
+    box-sizing: border-box
+    height: 92vh
     .cont-add-time,.cont-set-time,.cont-actionBtn
         width: 50%
         display: flex
         justify-content: center
+        z-index: 2
     .timer
     
         width: 50%
