--- a/src/TopNav/TopNav.sass
+++ b/src/TopNav/TopNav.sass
@@ -8,9 +8,10 @@
     flex-direction: row
     justify-content: space-between
     padding: 1%
-    height: 6vh
+    height: 5vh
     align-items: center
-    
+    box-sizing: border-box
+    z-index: 2
 
 .nav-button
     
