--- a/src/Canvas/Canvas.sass
+++ b/src/Canvas/Canvas.sass
@@ -2,6 +2,9 @@
 
 
 .canvas
-    // width: 50px
-    // height: 50px
-    // background-color: red
+    position: absolute
+    box-sizing: border-box
+    width: 99%
+    height: 99%
+    // top: 25%
+    // left: 25%
