--- a/src/Footer/Footer.sass
+++ b/src/Footer/Footer.sass
@@ -3,12 +3,13 @@
 .footer
     background-color: $topNav
     width: 100%
-    height: 30px
+    // height: 30px
     display: flex
     justify-content: center
     display: flex
     justify-content: center
-    margin-top: auto
+    height: 3vh
+    box-sizing: border-box
     .footer-cont
         width: 50%
         display: flex
