--- a/src/Secundomer/Secundomer.sass
+++ b/src/Secundomer/Secundomer.sass
@@ -1,9 +1,21 @@
+.content
+    display: flex
+    flex-direction: column
+
+
+
 .content-contTimer
     display: flex
     flex-direction: column
     align-items: center
-    padding: 50px
+    justify-content: center
+    // padding: 50px
+    background-color: #191a18
+    
+    height: 92vh
+    width: 100wh
     .timer
+
         margin: 0
         padding-top: 150px
         font-size: 50px
@@ -13,6 +25,7 @@
     .play 
         display: flex
         justify-content: space-around
+        z-index: 2
         svg
             margin-top: 50px
             margin: 20px 6px
@@ -21,7 +34,8 @@
 
 
 .contCell
-    padding-top: 150px
+    z-index: 2
+    // padding-top: 150px
     display: flex
     flex-direction: row
     .timer-cellNumb
@@ -31,6 +45,7 @@
         font-size: 2em
         // background: linear-gradient(135deg, #12BCB0 20%, #FABE0E 70%)
         background: linear-gradient(135deg, #c41616 20%, #4c00ff 70%)
+
         -webkit-background-clip: text
         -webkit-text-fill-color: transparent
         display: inline-block
@@ -42,6 +57,7 @@
             font-size: 50px
             font-family: 'Ribeye Marrow', cursive
             padding: 5px        
+            color: #fff
     .timer-cellNumb:not(:first-child)
         border-left: 1px solid #000
 .play 
