--- a/src/Footer/Footer.sass
+++ b/src/Footer/Footer.sass
@@ -1,7 +1,9 @@
 @import '../color.sass';
 
 .footer
-    background-color: $topNav
+    position: absolute
+    bottom: 0vh
+    background-color: $darkTopNav
     width: 100%
     // height: 30px
     display: flex
