--- a/src/Buttons/nav/Nav.sass
+++ b/src/Buttons/nav/Nav.sass
@@ -4,7 +4,7 @@
     
 .link
     background-color: red
-    padding: 15px 15px
+    padding: 10px 13px
     margin-left: 2px
     text-decoration: none
     border-radius: 10px
@@ -16,3 +16,8 @@
 
 .link:active
     border: 1px solid #fff
+
+
+@media (min-width: 300px) and (max-width: 400px)
+    .link
+        padding: 6px 7px
